--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Amatic SC", cursive;
+  background: #ffe68b;
+}
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-family: "Amatic SC", cursive;
+  font-size: 4rem;
+}
+
+.btn-new {
+  font-family: "Amatic SC", cursive;
+  font-size: 2rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 0;
+  background: rgb(246, 177, 116);
+  color: #353535;
+  cursor: pointer;
+  transition: background 300ms;
+}
+
+button:hover,
+button:focus {
+  background: rgb(246, 177, 116, 0.8);
 }
