--- a/src/pages/QuizList/QuizList.module.css
+++ b/src/pages/QuizList/QuizList.module.css
@@ -14,12 +14,12 @@
   align-items: center;
   gap: 2rem;
   cursor: pointer;
+  height: 7rem;
 }
 
 .quizList li .listPhoto {
   background: #fff;
-  height: 60px;
-  width: 60px;
+  height: 100%;
   border-radius: 50%;
   display: block;
 }
