--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,9 +11,19 @@
   border-radius: 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 1rem;
+  position: relative;
+  opacity: 0.94;
 }
 
 .content {
   padding: 50px 85px;
-  width: 100%;
+  /* width: 100%; */
+}
+
+.closeIcon {
+  width: 2rem;
+  position: absolute;
+  right: 0;
+  margin: 0.5rem;
+  cursor: pointer;
 }
