--- a/src/pages/QuizList/QuizList.module.css
+++ b/src/pages/QuizList/QuizList.module.css
@@ -12,9 +12,14 @@
   background-color: #ffe9e4;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 2rem;
   cursor: pointer;
   height: 7rem;
+}
+
+.quizListNumber {
+  margin: auto;
 }
 
 .quizList li .listPhoto {
@@ -22,7 +27,4 @@
   height: 100%;
   border-radius: 50%;
   display: block;
-}
-
-.listTitle div {
 }
