--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,6 @@
 
 .content {
   padding: 50px 85px;
-  /* width: 100%; */
 }
 
 .closeIcon {
@@ -26,4 +25,4 @@
   right: 0;
   margin: 0.5rem;
   cursor: pointer;
-}
+} */
