--- a/src/pages/QuizQuestion/QuizQuestion.module.css
+++ b/src/pages/QuizQuestion/QuizQuestion.module.css
@@ -7,7 +7,7 @@
 .quizPhoto {
   width: 390px;
   height: 390px;
-  background-color: #f5f5f5;
+  background-color: #ffe9e4;
 }
 
 .quizQuestion h2 {
@@ -24,6 +24,11 @@
 .quizAnswers li {
   padding: 20px 20px;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: #ffe9e4;
   cursor: pointer;
+}
+
+.quizAnswers li:hover,
+.quizAnswers li:focus {
+  background-color: #ffd8cf;
 }
