--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -8,7 +8,7 @@
 .container {
   width: 950px;
   background: rgba(253, 250, 246, 0.95);
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 1rem;
   position: relative;
