--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -8,14 +8,14 @@ body {
 
 h1 {
   font-size: 5rem;
-  color: #513500;
+  color: var(--heading-main);
   text-align: center;
 }
 
 h3 {
   text-align: center;
   font-size: 2.5rem;
-  color: #513500;
+  color: var(--heading-main);
 }
 
 h1::after {
@@ -23,7 +23,7 @@ h1::after {
   display: block;
   width: 90%;
   height: 1px;
-  background: #513500;
+  background: var(--heading-main);
   margin: 2rem auto;
 }
 
@@ -32,7 +32,7 @@ h1::after {
   gap: 1rem;
   justify-content: center;
   margin-top: 2rem;
-  color: #513500;
+  color: var(--heading-main);
 }
 
 .btn {
@@ -41,7 +41,7 @@ h1::after {
   font-weight: bold;
   border: 1px solid rgb(198, 198, 198);
   font-family: "Amatic SC", cursive;
-  background: #ffe6b8;
+  background: var(--button-basic);
   cursor: pointer;
   border: 0;
   border-radius: 0.5rem;
@@ -49,5 +49,5 @@ h1::after {
 
 .btn:hover,
 .btn:focus {
-  background: #ffcf77;
+  background: var(--button-hover);
 }
