--- a/src/pages/MemoryGame/MemoryGame.module.css
+++ b/src/pages/MemoryGame/MemoryGame.module.css
@@ -43,17 +43,17 @@
   font-family: "Amatic SC", cursive;
   font-size: 2rem;
   padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
+  border-radius: var(--border-radius);
   border: 0;
-  background: #ffe6b8;
-  color: #353535;
+  background: var(--button-basic);
+  color: var(--heading-main);
   cursor: pointer;
   transition: background 300ms;
 }
 
 button:hover,
 button:focus {
-  background: #ffcf77;
+  background: var(--button-hover);
 }
 
 .modalContainer {
@@ -65,13 +65,13 @@ button:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--bg-grey);
 }
 
 .modal {
-  background-color: #fff;
+  background-color: var(--bg-light);
   padding: 3rem;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   text-align: center;
 }
