--- a/src/components/QuizQuestion/QuizQuestion.module.css
+++ b/src/components/QuizQuestion/QuizQuestion.module.css
@@ -1,17 +1,18 @@
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 40px;
+  gap: 2rem;
 }
 
 .quizPhoto {
   width: 390px;
   height: 390px;
-  background-color: #ffe9e4;
+  background-color: var(--button-pink-basic);
 }
 
 .quizQuestion h2 {
   margin-bottom: 2rem;
+  font-size: 2.5rem;
 }
 
 .quizAnswers {
@@ -19,16 +20,18 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .quizAnswers li {
   padding: 20px 20px;
   border-radius: var(--border-radius);
-  background-color: #ffe9e4;
+  background-color: var(--button-pink-basic);
   cursor: pointer;
 }
 
 .quizAnswers li:hover,
 .quizAnswers li:focus {
-  background-color: #ffd8cf;
+  background-color: var(--button-pink-hover);
 }
