--- a/src/components/QuizQuestion/QuizQuestion.module.css
+++ b/src/components/QuizQuestion/QuizQuestion.module.css
@@ -11,8 +11,8 @@
 }
 
 .quizQuestion h2 {
-  margin-bottom: 2rem;
-  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
 }
 
 .quizAnswers {
@@ -25,7 +25,7 @@
 }
 
 .quizAnswers li {
-  padding: 20px 20px;
+  padding: 20px;
   border-radius: var(--border-radius);
   background-color: var(--button-pink-basic);
   cursor: pointer;
@@ -34,4 +34,32 @@
 .quizAnswers li:hover,
 .quizAnswers li:focus {
   background-color: var(--button-pink-hover);
+}
+
+@media (max-width: 920px) {
+  .container {
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
+  }
+
+  .quizPhoto {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+
+  .quizQuestion h2 {
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+  }
+
+  .quizQuestion h2 {
+    margin-bottom: 0.5rem;
+  }
+  .quizAnswers li {
+    padding: 15px;
+    gap: 0.5rem;
+    font-size: 1rem;
+    font-weight: normal;
+  }
 }
