--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --button-pink-basic: #ffe9e4;
   --button-pink-hover: #ffd8cf;
   --bg-light: #fff;
+  --bg-transparent: rgba(253, 250, 246, 0.95);
   --bg-grey: rgba(255, 255, 255, 0.2);
 
   --border-radius: 20px;
