--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -51,3 +51,50 @@ h1::after {
 .btn:focus {
   background: var(--button-hover);
 }
+
+@media (max-width: 930px) {
+  h1 {
+    font-size: 4rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  .btn {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 3rem;
+    font-weight: normal;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: normal;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+    font-weight: normal;
+    padding: 1rem 3rem;
+  }
+}
+
+@media (max-width: 550px) {
+  h1 {
+    font-size: 2rem;
+    padding: 1.2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h1::after {
+    margin: 0.5rem auto;
+  }
+}
