--- a/src/pages/MemoryGame/MemoryGame.module.css
+++ b/src/pages/MemoryGame/MemoryGame.module.css
@@ -85,3 +85,28 @@ button:focus {
   margin-bottom: 1rem;
   font-size: 1.4rem;
 }
+
+@media (max-width: 920px) {
+  .gameComponent {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cardGrid {
+    gap: 0.2rem;
+  }
+
+  .leftSidebar {
+    flex-direction: row;
+    gap: 1rem;
+    margin-right: 0;
+  }
+
+  h1::after {
+    display: none;
+  }
+
+  .gameInfo {
+    flex-direction: row;
+  }
+}
