--- a/src/pages/MemoryGame/MemoryGame.module.css
+++ b/src/pages/MemoryGame/MemoryGame.module.css
@@ -8,7 +8,6 @@
   grid-template-columns: repeat(4, 1fr);
   margin-top: 1rem;
   gap: 1rem;
-  max-height: 20%;
 }
 
 .leftSidebar {
@@ -17,7 +16,7 @@
   justify-content: space-around;
   align-items: center;
   height: 100%;
-  margin-right: 100px;
+  margin-right: 1.2rem;
 }
 
 .gameInfo {
